yaml-examples/cyberchef/cyberchef-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: cyberchef
  labels:
    app: cyberchef
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cyberchef
  template:
    metadata:
      labels:
        app: cyberchef
    spec:
      containers:
      - name: cyberchef
        image: mpepping/cyberchef
        imagePullPolicy: Always
        ports:
          - containerPort: 8000
        livenessProbe:
          httpGet:
            port: 8000
            path: /
            httpHeaders:
              - name: Liveness-Header
                value: Cyberchef-Probe
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 3
