yaml-examples/cyberchef/cyberchef-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cyberchef
  namespace: default
spec:
  selector:
    app: cyberchef
  ports:
  - name: web
    port: 8000
    targetPort: 8000
